fix extra whitespace after scaling

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -1,15 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
+html,
 body {
 	padding: 0;
 	margin: 0;
 	overflow-x: hidden;
+	height: 100vh;
 }
 
 * {
 	font-family: "Nanum Gothic", sans-serif;
 	box-sizing: border-box;
 	background-repeat: no-repeat;
+}
+
+#outerRoot {
+	width: fit-content;
+	overflow: hidden;
 }
 
 #root {
